Add png images for members 1, 2, and 3 in the assets directory

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500;700&family=Inter:wght@400;600;700&family=Work+Sans:wght@400;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Inter:wght@400;600;700&family=Work+Sans:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="assets/Icon.png" />
@@ -56,12 +56,16 @@
               </h1>
               <p class="hero__lead">
                 On trace des itinéraires personnalisés, on décortique les
-                programmes et on prépare chaque dossier comme une expédition.
-                Tu viens ?
+                programmes et on prépare chaque dossier comme une expédition. Tu
+                viens ?
               </p>
               <div class="hero__cta">
-                <a class="btn btn--solid" href="#contact">Prendre rendez-vous</a>
-                <a class="btn btn--ghost" href="#membres">Rencontrer l'équipe</a>
+                <a class="btn btn--solid" href="#contact"
+                  >Prendre rendez-vous</a
+                >
+                <a class="btn btn--ghost" href="#membres"
+                  >Rencontrer l'équipe</a
+                >
               </div>
               <dl class="hero__metrics">
                 <div>
@@ -84,22 +88,33 @@
                 <div class="poster__mountains"></div>
                 <div class="poster__birds"></div>
                 <div class="poster__stamp">LMY</div>
-                <p class="poster__caption">Club d'orientation · Voyage académique</p>
+                <p class="poster__caption">
+                  Club d'orientation · Voyage académique
+                </p>
               </div>
             </div>
           </div>
           <div class="mission-points container">
             <article class="mission-card">
               <h2>Écoute dédiée</h2>
-              <p>Coaching individuel ou en petits groupes pour clarifier chaque trajectoire.</p>
+              <p>
+                Coaching individuel ou en petits groupes pour clarifier chaque
+                trajectoire.
+              </p>
             </article>
             <article class="mission-card">
               <h2>Outils concrets</h2>
-              <p>Cartes de filières, veille opportunités, modèles de lettres et CV.</p>
+              <p>
+                Cartes de filières, veille opportunités, modèles de lettres et
+                CV.
+              </p>
             </article>
             <article class="mission-card">
               <h2>Mentors alliés</h2>
-              <p>Alumni & partenaires académiques pour relire, conseiller, propulser.</p>
+              <p>
+                Alumni & partenaires académiques pour relire, conseiller,
+                propulser.
+              </p>
             </article>
           </div>
         </section>
@@ -108,13 +123,20 @@
           <div class="container members">
             <div class="section__heading">
               <p class="section__eyebrow">Le collectif</p>
-              <h2 class="section__title">Facilitatrices, mentors et éclaireurs</h2>
+              <h2 class="section__title">
+                Facilitatrices, mentors et éclaireurs
+              </h2>
               <p class="section__lead">
                 La liste se met à jour automatiquement depuis
-                <code>members.txt</code>. Ajoute une ligne et la carte se remplit.
+                <code>members.txt</code>. Ajoute une ligne et la carte se
+                remplit.
               </p>
             </div>
-            <div class="members__grid members-list" id="members-list" aria-live="polite">
+            <div
+              class="members__grid members-list"
+              id="members-list"
+              aria-live="polite"
+            >
               <p class="members-list__loading">Chargement des membres…</p>
             </div>
           </div>
@@ -128,13 +150,16 @@
                 <h2 class="section__title">Passe au local ou écris-nous</h2>
               </header>
               <p class="contact__intro">
-                Le club est ouvert chaque jeudi midi et vendredi après les cours.
-                Une question urgente ? On répond sous 48&nbsp;heures maximum.
+                Le club est ouvert chaque jeudi midi et vendredi après les
+                cours. Une question urgente ? On répond sous 48&nbsp;heures
+                maximum.
               </p>
               <ul class="contact__details">
                 <li>
                   <span class="contact__label">Email</span>
-                  <a href="mailto:orientation@lm-youssef.ma">orientation@lm-youssef.ma</a>
+                  <a href="mailto:orientation@lm-youssef.ma"
+                    >orientation@lm-youssef.ma</a
+                  >
                 </li>
                 <li>
                   <span class="contact__label">Téléphone</span>
@@ -159,10 +184,12 @@
               <p class="contact__badge">Entrée libre</p>
               <h3>Stand orientation & café</h3>
               <p>
-                Ressources imprimées, cartes des campus, fiches opportunités et un coin pour travailler
-                ses dossiers tranquillement.
+                Ressources imprimées, cartes des campus, fiches opportunités et
+                un coin pour travailler ses dossiers tranquillement.
               </p>
-              <p class="contact__footnote">Ramène ton carnet · Wi-Fi disponible · Impression sur place</p>
+              <p class="contact__footnote">
+                Ramène ton carnet · Wi-Fi disponible · Impression sur place
+              </p>
             </aside>
           </div>
         </section>
