Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <main class="container">
             <section class="hero">
                 <div class="hero__copy">
-                    <h1 class="hero__title">Là où les voyages commencent.</h1>
-                    <p class="hero__lead">Un club pour les explorateurs, les rêveurs et les bâtisseurs du Lycée Moulay Youssef. On partage, on crée, on grandit.</p>
-                    <a href="#members" class="btn hero__cta">Rencontrer le club</a>
+                    <h1 class="hero__title">kys.</h1>
+                    <p class="hero__lead">kys</p>
+                    <a href="#members" class="btn hero__cta">Rencontrer les negros
+                    </a>
                 </div>
                 <div class="hero__poster">
                     <div class="hero__poster-placeholder">
-                        <p>Ajoutez votre <code>poster.jpg</code> dans le dossier <code>assets</code> pour l'afficher ici.</p>
                     </div>
                     <!-- L'image du poster sera ajoutée ici par le script si elle existe -->
                 </div>
@@ -49,7 +49,7 @@
             <div class="content-box">
                 <section id="about" class="section">
                     <h2 class="section__title">Notre Mission</h2>
-                    <p>Orioclub est un espace dédié à l'exploration des passions et à la préparation de l'avenir. Nous organisons des ateliers, des rencontres avec des professionnels et des projets collaboratifs pour aider chaque membre à trouver sa voie et à construire un parcours qui a du sens.</p>
+                    <p>I will touch taha .</p>
                 </section>
 
                 <section id="members" class="section">
@@ -62,15 +62,15 @@
                 <section id="contact" class="section">
                     <h2 class="section__title">Contactez-nous</h2>
                     <ul class="contact-list">
-                        <li>Email: <a href="mailto:contact@orioclub.com">contact@orioclub.com</a></li>
-                        <li>Instagram: <a href="https://instagram.com/orioclub" target="_blank">@orioclub</a></li>
+                        <li>Email: <a href="mailto:contact@orioclub.com">contact@yourmom.com</a></li>
+                        <li>Instagram: <a href="https://instagram.com/ofsclub_mly" target="_blank">@ofsclub</a></li>
                     </ul>
                 </section>
             </div>
         </main>
 
         <footer class="site-footer">
-            <p>&copy; <span data-year></span> Orioclub. Tous droits réservés.</p>
+            <p>&copy; <span data-year></span> kyskyskyskyskyskyskysjyskyskjkfbkjdkjlb.</p>
         </footer>
     </div>
 
