--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="blob blob-2"></div>
     </div>
 
+    <a href="#main" class="skip-link">Aller au contenu</a>
     <div class="page">
         <header class="site-header">
             <div class="container site-header__inner">
@@ -31,7 +32,7 @@
             </div>
         </header>
 
-        <main class="container">
+    <main id="main" class="container" tabindex="-1">
             <section class="hero">
                 <div class="hero__copy">
                     <h1 class="hero__title">kys.</h1>
@@ -69,9 +70,14 @@
             </div>
         </main>
 
-        <footer class="site-footer">
-            <p>&copy; <span data-year></span> kyskyskyskyskyskyskysjyskyskjkfbkjdkjlb.</p>
-        </footer>
+                <footer class="site-footer">
+                        <p>&copy; <span data-year></span> kyskyskyskyskyskyskysjyskyskjkfbkjdkjlb.</p>
+                        <div style="margin-top: 1rem;">
+                            <button class="btn btn--outline" id="toggle-anim-btn" aria-pressed="false" type="button">
+                                Désactiver les animations
+                            </button>
+                        </div>
+                </footer>
     </div>
 
     <script src="script.js" defer></script>
