--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Orioclub</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;600&family=Outfit:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="assets/Icon.png" type="image/png">
 </head>
@@ -35,9 +35,12 @@
     <main id="main" class="container" tabindex="-1">
             <section class="hero">
                 <div class="hero__copy">
-                    <h1 class="hero__title">kys.</h1>
+                                        <h1 class="hero__title">kys.</h1>
+                                        <svg class="hero__squiggle" width="100%" height="28" viewBox="0 0 600 28" aria-hidden="true" focusable="false">
+                                            <path id="squiggle-path" d="M2 14 C 50 2, 100 26, 150 14 S 250 2, 300 14 350 26, 400 14 450 2, 500 14 550 26, 598 14"/>
+                                        </svg>
                     <p class="hero__lead">kys</p>
-                    <a href="#members" class="btn hero__cta">Rencontrer les negros
+                    <a href="#members" class="btn hero__cta">Rencontrer les negros <img src="assets/chevron-right.svg" class="chev" alt="" aria-hidden="true">
                     </a>
                 </div>
                 <div class="hero__poster">
@@ -49,24 +52,25 @@
 
             <div class="content-box">
                 <section id="about" class="section">
-                    <h2 class="section__title">Notre Mission</h2>
+                    <h2 class="section__title"><img class="icon icon-title" src="assets/info.svg" alt="" aria-hidden="true">Notre Mission</h2>
                     <p>I will touch taha .</p>
                 </section>
 
                 <section id="members" class="section">
-                    <h2 class="section__title">Nos Membres</h2>
+                    <h2 class="section__title"><img class="icon icon-title" src="assets/users.svg" alt="" aria-hidden="true">Nos Membres</h2>
                     <div class="members-list" id="members-list">
                         <!-- Les membres seront chargés ici par script.js -->
                     </div>
                 </section>
 
                 <section id="contact" class="section">
-                    <h2 class="section__title">Contactez-nous</h2>
+                    <h2 class="section__title"><img class="icon icon-title" src="assets/mail.svg" alt="" aria-hidden="true">Contactez-nous</h2>
                     <ul class="contact-list">
                         <li>Email: <a href="mailto:contact@orioclub.com">contact@yourmom.com</a></li>
                         <li>Instagram: <a href="https://instagram.com/ofsclub_mly" target="_blank">@ofsclub</a></li>
                     </ul>
                 </section>
+                <!-- The events section will be injected here dynamically if events exist -->
             </div>
         </main>
 
