--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     <main id="main" class="container" tabindex="-1">
             <section class="hero">
                 <div class="hero__copy">
-                                        <h1 class="hero__title">kys.</h1>
-                                        <svg class="hero__squiggle" width="100%" height="28" viewBox="0 0 600 28" aria-hidden="true" focusable="false">
-                                            <path id="squiggle-path" d="M2 14 C 50 2, 100 26, 150 14 S 250 2, 300 14 350 26, 400 14 450 2, 500 14 550 26, 598 14"/>
-                                        </svg>
+                    <h1 class="hero__title">kys.</h1>
+                    <svg class="hero__squiggle" width="100%" height="28" viewBox="0 0 600 28" aria-hidden="true" focusable="false">
+                        <path id="squiggle-path" d="M2 14 C 50 2, 100 26, 150 14 S 250 2, 300 14 350 26, 400 14 450 2, 500 14 550 26, 598 14" />
+                    </svg>
                     <p class="hero__lead">kys</p>
-                    <a href="#members" class="btn hero__cta">Rencontrer les negros <img src="assets/chevron-right.svg" class="chev" alt="" aria-hidden="true">
+                    <a href="#members" class="btn hero__cta">
+                        Rencontrer les negros
+                        <img src="assets/chevron-right.svg" class="chev" alt="" aria-hidden="true">
                     </a>
                 </div>
                 <div class="hero__poster">
