--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -34,19 +35,53 @@
 
     <main id="main" class="container" tabindex="-1">
             <section class="hero">
+                <!-- Decorative floating blobs scattered throughout page -->
+                <svg class="page-blob page-blob--1" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M45.1,-63.5C50.1,-49.4,40.3,-27.4,38.5,-10.8C36.7,5.9,42.9,17.1,39.9,23.8C37,30.4,24.8,32.5,14.4,33.8C4,35.2,-4.6,35.8,-7.7,30.5C-10.7,25.3,-8.2,14.3,-10.9,7.4C-13.5,0.5,-21.4,-2.3,-25.8,-9.3C-30.3,-16.3,-31.3,-27.4,-26.5,-41.6C-21.6,-55.7,-10.8,-72.8,4.6,-78.3C20,-83.7,40,-77.6,45.1,-63.5Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--2" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M40,-50.1C49.9,-39.4,54.7,-24.9,53.6,-12.3C52.4,0.4,45.4,11.3,36.6,16C27.8,20.8,17.2,19.5,7.5,24.9C-2.2,30.3,-11.1,42.5,-20.6,44.3C-30,46.2,-40.2,37.6,-43.6,27.3C-47,17,-43.7,4.9,-36.9,-1.8C-30.1,-8.4,-19.6,-9.7,-12.9,-21C-6.2,-32.3,-3.1,-53.6,6,-60.8C15.1,-67.9,30.1,-60.9,40,-50.1Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--3" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M22.5,-19.2C38.6,-13.2,67.8,-15.2,70.1,-11C72.4,-6.9,48,3.4,33.3,10.1C18.5,16.7,13.4,19.8,4.6,31.1C-4.3,42.4,-16.9,61.8,-29.3,64.3C-41.7,66.8,-53.8,52.4,-51.7,38.4C-49.5,24.4,-33,10.7,-25,0.8C-17,-9.1,-17.5,-15.3,-14.8,-23.6C-12,-32,-6,-42.5,-1.4,-40.9C3.2,-39.2,6.3,-25.3,22.5,-19.2Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--4" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M43.5,-59.9C51.9,-53.8,51.2,-35.1,54.9,-19C58.5,-2.8,66.7,10.7,63.5,20.7C60.4,30.7,46,37.1,33.5,47.1C21.1,57.1,10.5,70.6,-1.4,72.5C-13.3,74.4,-26.5,64.6,-37,53.9C-47.4,43.3,-55,31.8,-60.1,18.8C-65.3,5.9,-68.1,-8.6,-63.4,-19.9C-58.7,-31.2,-46.7,-39.5,-34.9,-44.5C-23.1,-49.5,-11.5,-51.2,3,-55.4C17.6,-59.5,35.1,-66,43.5,-59.9Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--5" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M36.1,-58.5C49.3,-54.9,64.4,-50.4,69.3,-40.5C74.2,-30.6,68.9,-15.3,69.5,0.4C70.2,16,76.8,32.1,72.4,42.9C68,53.7,52.7,59.2,38.8,62.7C24.9,66.1,12.5,67.5,1.8,64.3C-8.8,61.1,-17.6,53.4,-30.9,49.6C-44.2,45.8,-62.1,46,-73.9,38.4C-85.8,30.8,-91.6,15.4,-88.4,1.9C-85.1,-11.6,-72.7,-23.2,-61.3,-31.5C-49.8,-39.8,-39.2,-44.7,-29.2,-50.2C-19.1,-55.7,-9.6,-61.7,0.9,-63.3C11.4,-64.9,22.9,-62.1,36.1,-58.5Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--6" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M27.8,-50.4C37.6,-42.5,48.1,-38.2,52.5,-30.4C56.8,-22.6,55,-11.3,56.3,0.7C57.6,12.8,62,25.5,57.8,33.6C53.6,41.7,40.8,45.1,29.7,50.1C18.7,55.2,9.3,61.8,-1,63.5C-11.3,65.2,-22.6,62,-30,54.8C-37.5,47.7,-41,36.7,-45.2,26.9C-49.3,17.2,-54.1,8.6,-60.3,-3.6C-66.5,-15.7,-74.2,-31.5,-70.2,-41.6C-66.2,-51.7,-50.6,-56.2,-37,-61.9C-23.4,-67.6,-11.7,-74.5,-1.3,-72.2C9,-69.9,18,-58.3,27.8,-50.4Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--7" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M42,-48.5C55.4,-38.8,68,-26.5,73.9,-10.4C79.8,5.6,79.2,25.5,70.3,40.4C61.5,55.4,44.5,65.5,27.1,69.9C9.6,74.3,-8.2,73,-20.4,64.8C-32.5,56.5,-39,41.4,-48.1,27.1C-57.2,12.7,-69,-0.8,-67.6,-12.5C-66.2,-24.2,-51.6,-34.1,-38.1,-43.8C-24.7,-53.5,-12.3,-62.9,1,-64.1C14.3,-65.2,28.6,-58.2,42,-48.5Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--8" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M44.4,-48.3C57.2,-42.2,67,-27.9,71.6,-11.3C76.1,5.3,75.4,24.2,65.6,34.8C55.8,45.3,37,47.6,19.3,54.8C1.6,62.1,-15,74.3,-25.7,70.5C-36.5,66.6,-41.5,46.8,-47.1,30.4C-52.7,14.1,-58.8,1.3,-57.6,-10.9C-56.3,-23.1,-47.6,-34.8,-36.8,-41.3C-26,-47.8,-13,-49.1,1.4,-50.8C15.8,-52.4,31.6,-54.5,44.4,-48.3Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--9" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M40,-50.1C49.9,-39.4,54.7,-24.9,53.6,-12.3C52.4,0.4,45.4,11.3,36.6,16C27.8,20.8,17.2,19.5,7.5,24.9C-2.2,30.3,-11.1,42.5,-20.6,44.3C-30,46.2,-40.2,37.6,-43.6,27.3C-47,17,-43.7,4.9,-36.9,-1.8C-30.1,-8.4,-19.6,-9.7,-12.9,-21C-6.2,-32.3,-3.1,-53.6,6,-60.8C15.1,-67.9,30.1,-60.9,40,-50.1Z" transform="translate(100 100)" />
+                </svg>
+                <svg class="page-blob page-blob--10" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                    <path fill="#FA4D56" d="M45.1,-63.5C50.1,-49.4,40.3,-27.4,38.5,-10.8C36.7,5.9,42.9,17.1,39.9,23.8C37,30.4,24.8,32.5,14.4,33.8C4,35.2,-4.6,35.8,-7.7,30.5C-10.7,25.3,-8.2,14.3,-10.9,7.4C-13.5,0.5,-21.4,-2.3,-25.8,-9.3C-30.3,-16.3,-31.3,-27.4,-26.5,-41.6C-21.6,-55.7,-10.8,-72.8,4.6,-78.3C20,-83.7,40,-77.6,45.1,-63.5Z" transform="translate(100 100)" />
+                </svg>
+
                 <div class="hero__copy">
-                    <h1 class="hero__title" id="hero-title">Loading...</h1>
+                    <h1 class="hero__title" id="hero-title">Chargement...</h1>
                     <svg class="hero__squiggle" width="100%" height="28" viewBox="0 0 600 28" aria-hidden="true" focusable="false">
-                        <path id="squiggle-path" d="M2 14 C 50 2, 100 26, 150 14 S 250 2, 300 14 350 26, 400 14 450 2, 500 14 550 26, 598 14" />
+                        <path id="squiggle-path" d="M0 14 H 600" />
                     </svg>
-                    <p class="hero__lead" id="hero-subtitle">Loading...</p>
+                    <p class="hero__lead" id="hero-subtitle">Chargement...</p>
                     <a href="#members" class="btn hero__cta">
-                        Rencontrer les negros
+                        Rencontrer les membres
                         <img src="assets/chevron-right.svg" class="chev" alt="" aria-hidden="true">
                     </a>
                 </div>
                 <div class="hero__poster">
-                    <div class="hero__poster-placeholder">
+                    <div class="hero__poster--placeholder">
+                        <strong>Affiche en préparation</strong>
+                        <span>Ajoutez assets/poster.jpg pour l'afficher ici.</span>
                     </div>
                     <!-- L'image du poster sera ajoutée ici par le script si elle existe -->
                 </div>
@@ -55,7 +90,7 @@
             <div class="content-box">
                 <section id="about" class="section">
                     <h2 class="section__title"><img class="icon icon-title" src="assets/info.svg" alt="" aria-hidden="true">Notre Mission</h2>
-                    <p id="about-content">Loading...</p>
+                    <p id="about-content">Chargement...</p>
                 </section>
 
                 <section id="members" class="section">
@@ -68,16 +103,16 @@
                 <section id="contact" class="section">
                     <h2 class="section__title"><img class="icon icon-title" src="assets/mail.svg" alt="" aria-hidden="true">Contactez-nous</h2>
                     <ul class="contact-list">
-                        <li>Email: <a href="mailto:contact@orioclub.com">contact@yourmom.com</a></li>
-                        <li>Instagram: <a href="https://instagram.com/ofsclub_mly" target="_blank">@ofsclub</a></li>
+                        <li>Email: <a href="mailto:contact@orioclub.com">contact@orioclub.com</a></li>
+                        <li>Instagram: <a href="https://instagram.com/ofsclub_mly" target="_blank" rel="noopener">@ofsclub</a></li>
                     </ul>
                 </section>
-                <!-- The events section will be injected here dynamically if events exist -->
+                <!-- La section des événements sera injectée dynamiquement si nécessaire -->
             </div>
         </main>
 
-                <footer class="site-footer">
-                        <p>&copy; <span data-year></span> kyskyskyskyskyskyskysjyskyskjkfbkjdkjlb.</p>
+        <footer class="site-footer">
+            <p>&copy; <span data-year></span> Orioclub. Tous droits réservés.</p>
                         <div style="margin-top: 1rem;">
                             <button class="btn btn--outline" id="toggle-anim-btn" aria-pressed="false" type="button">
                                 Désactiver les animations
