feat: Enhance site content and styling
- Updated events.txt to improve formatting and remove unnecessary comments.
- Modified index.html to include meta tags for SEO and improved contact section.
- Revamped members.txt with clearer roles and descriptions for club members.
- Improved script.js to enhance member display logic and messaging.
- Enhanced styles.css with new spacing variables, improved button styles, and refined layout for better responsiveness.
- Added CUSTOMIZATION_GUIDE.md for easier site personalization.
- Introduced a new placeholder image (polaroid-placeholder.png) for member avatars.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orioclub</title>
+    <meta name="description" content="ORIOCLUB - Club d'Orientation et d'Opportunités Scolaires. Accompagner chaque lycéen vers son avenir avec des conseils personnalisés et des opportunités concrètes.">
+    <meta name="keywords" content="orientation, parcoursup, lycée, études supérieures, mentorat, club étudiant">
+    <meta name="author" content="ORIOCLUB">
+    <title>ORIOCLUB - Orientation et Opportunités Scolaires</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -102,9 +105,12 @@
 
                 <section id="contact" class="section">
                     <h2 class="section__title"><img class="icon icon-title" src="assets/mail.svg" alt="" aria-hidden="true">Contactez-nous</h2>
+                    <p style="margin-bottom: 1.5rem; color: var(--text-muted); line-height: 1.7;">
+                        Vous avez des questions ou souhaitez rejoindre notre club ? N'hésitez pas à nous contacter !
+                    </p>
                     <ul class="contact-list">
-                        <li>Email: <a href="mailto:contact@orioclub.com">contact@orioclub.com</a></li>
-                        <li>Instagram: <a href="https://instagram.com/ofsclub_mly" target="_blank" rel="noopener">@ofsclub</a></li>
+                        <li>📧 Email : <a href="mailto:contact@orioclub.com">contact@orioclub.com</a></li>
+                        <li>📱 Instagram : <a href="https://instagram.com/ofsclub_mly" target="_blank" rel="noopener noreferrer">@ofsclub_mly</a></li>
                     </ul>
                 </section>
                 <!-- La section des événements sera injectée dynamiquement si nécessaire -->
@@ -112,13 +118,18 @@
         </main>
 
         <footer class="site-footer">
-            <p>&copy; <span data-year></span> Orioclub. Tous droits réservés.</p>
-                        <div style="margin-top: 1rem;">
-                            <button class="btn btn--outline" id="toggle-anim-btn" aria-pressed="false" type="button">
-                                Désactiver les animations
-                            </button>
-                        </div>
-                </footer>
+            <div class="container">
+                <p>&copy; <span data-year></span> ORIOCLUB. Tous droits réservés.</p>
+                <p style="font-size: 0.875rem; opacity: 0.8; margin-bottom: 1.25rem;">
+                    Club d'Orientation et d'Opportunités Scolaires
+                </p>
+                <div style="margin-top: 1.25rem;">
+                    <button class="btn btn--outline" id="toggle-anim-btn" aria-pressed="false" type="button">
+                        Désactiver les animations
+                    </button>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="script.js" defer></script>
